plugins {
    alias libs.plugins.android.application
}

// Kotlin 1.8+ ships jdk7/jdk8 extensions inside kotlin-stdlib; older transitive
// deps still pull kotlin-stdlib-jdk7/jdk8 and cause duplicate classes.
configurations.configureEach {
    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
}

android {
    namespace = "com.dwlhm.finan"
    compileSdk = 37

    defaultConfig {
        applicationId = "com.dwlhm.finan"
        minSdk = 30
        //noinspection OldTargetApi
        targetSdk = 35
        versionCode = 1
        versionName = "1.0.0"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
        }
    }

    lint {
        // API 36+ changes edge-to-edge and back behavior. Keep the production
        // target at 35 until those flows are tested on a current device.
        disable += "OldTargetApi"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(["-Xlint:deprecation", "-Xlint:unchecked"])
}

dependencies {
    implementation libs.androidx.appcompat
    implementation libs.androidx.activity
    implementation libs.androidx.fragment
    implementation libs.androidx.recyclerview

    testImplementation libs.junit

    androidTestImplementation libs.androidx.core
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.runner
    androidTestImplementation libs.androidx.rules
}
